# trash

./: 0001-something-for-jerome.patch  14  18.6  18.7  19b  19c  22.1  25x  6t2  M3way  MyBatch  anl_gni_poll.sh  anl_gni_wait.sh  bd  cln  common.sh.in  fo  funtime  get_kgni.c  go  goofi  hp  ii  ins  k2  kkk  kkk2  knlx  krun  more  n13  nexus-t  nexus-u  nrz  nx  nxt  ofid  oknl  oops  r18  (+69 more)
mpitry/: CMakeLists.txt  mpitry.c
